--- a/pages/conclusion/fault.mdx
+++ b/pages/conclusion/fault.mdx
@@ -1,3 +1,7 @@
+---
+title: 最不应该犯的错误
+---
+
 如果有什么是我们最不应该犯的错误，那就是我们在定价的时候期望用信息差来赚钱。
 
 由于 Podwise 与 [Otter.ai](http://Otter.ai) 之类的产品有个很大的区别，Otter 是服务于会议场景，在会议的转录中，基本不太可能出现重复音频，所以 Otter 的转录时间是肯定会被用满的。但 Podwise 不一样，Podcast 的有很强的头部效应，所以热门节目只需要转录一次，就可以永远服务其他用户，而 Podwise 服务只需要转录一次，也就是利用一份资源消耗，赚取多份利润，这是 Podwise 规划盈利模型的基本逻辑。结果，在第一次测试的时候，多为用户直接提问，是不是你们会缓存节目的转录结果，下个用户来的时候就不用再次转录了。这里面产生了两个逻辑：有用户提说，如果是我转的，那我能不能哪后续的阅读分润？还有用户提另外一端，如果已经被转过的节目，我在学习的时候能不能只扣我 0.5 次。到这里我们才恍然大悟，做产品永远不能把用户当傻瓜，这是我们最大的错误。
