--- a/pages/grow/strategy.mdx
+++ b/pages/grow/strategy.mdx
@@ -1,3 +1,7 @@
+---
+title: 到杠杆高的地方去做宣传
+---
+
 Podwise 遵循 0 成本宣传策略，毕竟是白手起家，本身也没什么钱去投入到营销中。但在过程中，我们还是总结了一些经验，尤其是一些起号的经验是特别值得分享的。
 
 首先我们认为，营销一定要去杠杆高的地方，也就是 KOC、KOL 多，而且有很好的流量发现机制的平台。
