--- a/pages/grow/tactics.mdx
+++ b/pages/grow/tactics.mdx
@@ -1,3 +1,7 @@
+---
+title: 互动、回复、关注长尾
+---
+
 因为即刻是个小众平台，所以涨粉相对困难，但因为 KOL / KOC 的比例很高，所以在设计即刻起号的过程中我们强调了互动的重要性，因为免费用户不能转录，只能查看会员和平台已转录的播客，每个月 4 期，所以我们提出了免费转录的方案，当然方案由即刻动态与 @Podwise 账号达成，这样就比较容易的达成了二次传播，这个活动在后续一个月的时间里，持续的为 Podwise 即刻账号带来了关注和互动。回看还是个非常不错的营销策略。
 
 ![engagement](/attachments/grow/engagement.png)
