--- a/pages/idea/millions.mdx
+++ b/pages/idea/millions.mdx
@@ -1,3 +1,7 @@
+---
+title: 百万美金的利基市场
+---
+
 我们在选定产品之后，也做了一次市场调研。首先我们大致测量了一下市场容量，全球播客听众应该在 2 亿左右，我们假定知识型硬核播客的内容为 10%，而其中有笔记需求的人占 1%，也就是有 20 万人的市场容量，假如 Podwise 在这个市场中占 50%，也就是 10w 订阅，按 $9.9 的月订，可以做到千万美金 ARR 上限。再从 Readwise 的市场验证，Readwise 为优质第二大脑中枢型产品，Readwise 的 MAU 为 200 万左右，假如在拥有 Readwise 的用户有 1% 的用户需要播客的内容，Podwise 占据 50% 市场，那也有 1w 订阅，按 $9.9 月订，也可以做到百万美金 ARR。
 
 我们觉得百万美金左右是个挺适合的规模，再大一定会被巨头盯上，再小的话可能不足以养活团队，这个规模可能是个独立开发者的甜蜜点。
