--- a/pages/launch/acquire.mdx
+++ b/pages/launch/acquire.mdx
@@ -1,3 +1,7 @@
+---
+title: 最初的 200 个用户
+---
+
 经过两个月的开发，我们 MVP 核心功能已经实现，觉得是时候进行一波邀请测试了。在邀请平台的选择上，一方面我们之前已经有 Waitlist 积累的将近 500 多个用户，可以通过邮件召回，另外我们也希望通过平台发声让更多的人了解我们。作为程序员，我们首选的宣发渠道是 V2EX，主要原因是 V2EX 是少数允许新产品进行免费宣发的平台，尤其是通过发送邀请码的方式，参与的热情会特别高。
 
 [[ Public Beta ] Podwise，专为 Podcast 听友设计的 AI 学习应用 🎁](https://www.v2ex.com/t/965212)
