--- a/pages/launch/feedback.mdx
+++ b/pages/launch/feedback.mdx
@@ -1,3 +1,7 @@
+---
+title: 永远跟用户站在一起
+---
+
 建立用户反馈一般有三种渠道，邮件反馈、论坛反馈和在线聊天反馈。从实时程度上排序：在线聊天> 论坛 > 邮件，但从效率上来说却是反过来的：在线聊天 < 论坛 < 邮件。原因是，在越异步的平台上，人们越倾向于在一次交互中提供尽可能多的信息，在这种背景下，邮件是期望交互次数最少的平台。这对于独立开发者们很重要，因为越少的交互次数则意味着越少的上下文切换，这样效率会提高很多。且在一天的时间分配上，还需要有很多时间在营销和开发中。
 
 Podwise 在一开始的社区反馈上选择了 Discord 社群的方式，Discord 是一个兼具论坛与在线聊天的用户反馈渠道。因为之前是从游戏社群发展而来的，所以它的语音和聊天能力很强，但在后续的发展中，Discord 逐渐开始支持用户在其平台上打造社区，其中最重要的特性是可以将 Channel 建成一个 Forum，这样就可以避免重要的信息被海量的聊天记录覆盖。在社区开始时，Podwise 就建立了几个基本的 Forum，包括 feature-request、bugs、help 还有 integration 等。从结果看，Discord 的 Forums 极大的促进了我们产品的正向循环，让我们与用户离得更近。
