--- a/pages/launch/pricing.mdx
+++ b/pages/launch/pricing.mdx
@@ -1,3 +1,7 @@
+---
+title: 定价要关注成本
+---
+
 在做产品之前，我们一致认为 LLM 带动的 AI 热潮，是 SaaS 软件很好的一个发展契机。因为大家已经习惯 LLM 有成本，所以在产品中叠加 LLM 的能力，可以使以前没有收费能力的软件转上变现的快车道。所以从定价的逻辑上，除了参考友商之外，我们核心还特别从成本角度考虑了定价。
 
 在对标产品上，我们选择了两个：[Otter.ai](http://otter.ai/) 和 Snipd
