--- a/pages/preface.mdx
+++ b/pages/preface.mdx
@@ -1,3 +1,7 @@
+---
+title: 前言
+---
+
 我们写这篇小册子主要是为了记录 Podwise 构建的完整经过，我们尽量忠实记录。虽说成功不可复制，但我们会尽量还原当时选择的依据以及事后的结果，所以这更像是一个复盘故事，而不是成功教科书。
 
 ### Podwise 是什么？
