--- a/pages/conclusion/future.mdx
+++ b/pages/conclusion/future.mdx
@@ -1,3 +1,7 @@
+---
+title: 对远景的一些规划
+---
+
 Podwise 在当前的主要形态是 Web 版，虽然有 Mobile first 的设计，可以在手机上直接打开，但毕竟不像 app 那样方便。所以移动版的 app 是我们未来首要的目标。另外还有一个重要的原因是，我们发现在平台营销时，大量的用户会问在哪里下载？而且还出现了用户在 App Store 中购买了同名的 app 发现不是我们的产品，过来找官方账号抱怨的。而且移动版可以至少帮我们做两件事，第一是扩大 Podwise 的应用场景，之前主要做笔记，现在也可以听了。第二是扩大产品的曝光范围，多平台的曝光是独立开发产品非常重要的，因为我们只需要 10000 个忠实用户就够了。类似于游戏的全平台发布，如果成本不高的话，强烈建议做多平台发布。
 
 Podwise 当前的客户组成还是华人为主，包括大陆和台湾地区，海外用户的比例当前还比较低。所以从营销上我们除了继续深耕国内的各大平台之外，我们首要的目标还是在海外建立自己的影响力。其中就包括 X、Reddit、Tiktok 和 Instagram 等平台。除了北美市场是 Podwise 出海的重点之外，东亚也是我们关注的重点，因为儒家文化圈对于学习的重视程度是相同的。在营销上还是有非常大的挑战的，我们也会尝试是用投流的方式来宣传产品，只要投流是正收益，我们就可以持续投流，将客群越滚越大。
