--- a/pages/grow/monetize.mdx
+++ b/pages/grow/monetize.mdx
@@ -1,3 +1,7 @@
+---
+title: 意料之外的爆发
+---
+
 在黑五到来之前，我们收到了一封来自竞对的 **65% OFF** 的邮件，其实没有思考太多，下意识告诉我们，黑五确实该做一次优惠，而且折扣力度应该是前所未有的，我们的选择是跟随。
 
 ![campaign](/attachments/grow/campaign.png)
