millions now more accuracy now

--- a/pages/idea/community.mdx
+++ b/pages/idea/community.mdx
@@ -2,7 +2,7 @@
 title: 从社区出发
 ---
 
-在产品这条路上我们为什么看中 Podwise 所面向的播客市场，这个的思路来源完全践行了 [The Minimalist Entrepreneur](http://https--jd--hooos--com.proxy.shaanxi.gov.cn/g-10089392354625/) 的强调的从社区出发，看到团队积累的 3000 多订阅用户，我们想是否能给他们做些产品？如果不能，那是否可以在播客领域做些什么？从自身和身边出发。
+在产品这条路上我们为什么看中 Podwise 所面向的播客市场，这个的思路来源完全践行了 [The Minimalist Entrepreneur](https://www.amazon.com.au/Minimalist-Entrepreneur-Great-Founders-More/dp/0593192397) 的强调的从社区出发，看到团队积累的 3000 多订阅用户，我们想是否能给他们做些产品？如果不能，那是否可以在播客领域做些什么？从自身和身边出发。
 
 所以我们团队脑暴了一个点子库：
 
@@ -10,7 +10,7 @@ title: 从社区出发
 
 点子库的内容大家可以看到，要不然是跟独立开发者相关，要不然跟播客相关。这些是我们分析过后可以横跨的两个圈子。我们认为基于自己的圈子，才有可能做出长久且优质的产品。
 
-播客内容的分析这件事的点子来源也挺神奇，我们团队有亲人很喜欢听音频课程，类似于得到等平台，并且有记录笔记的需求。之后我们也发现一个很有意思的现象，很多成功的产品，都是从自己身边的亲人发觉出来的，尤其是爱人。如果大家有做产品的需求，也可以从爱人的痛点需求多多挖掘。
+播客内容的分析这件事的点子来源也挺神奇，我们团队有家人很喜欢听音频课程，类似于得到等平台，并且有记录笔记的需求。之后我们也发现一个很有意思的现象，很多成功的产品，都是从自己身边的家人发觉出来的，尤其是爱人。如果大家有做产品的需求，也可以从爱人的痛点需求多多挖掘。
 
 至于为什么最终选择了 AI 播客的内容，首先来源于现实的需求，例如：「纵横四海」「Huberman lab」「Lex fridman podcast」等内容的听众的笔记需求。其次 AI 相关，风口上的猪也能飞起来。最后与我们听众会有交叉，可以通过播客的影响力传播。当然也许现在也算是证明了我们当时的判断，但回看的话也有点运气的成分在。
 
