--- a/pages/idea/millions.mdx
+++ b/pages/idea/millions.mdx
@@ -2,6 +2,16 @@
 title: 百万美金的利基市场
 ---
 
-我们在选定产品之后，也做了一次市场调研。首先我们大致测量了一下市场容量，全球播客听众应该在 2 亿左右，我们假定知识型硬核播客的内容为 10%，而其中有笔记需求的人占 1%，也就是有 20 万人的市场容量，假如 Podwise 在这个市场中占 50%，也就是 10w 订阅，按 $9.9 的月订，可以做到千万美金 ARR 上限。再从 Readwise 的市场验证，Readwise 为优质第二大脑中枢型产品，Readwise 的 MAU 为 200 万左右，假如在拥有 Readwise 的用户有 1% 的用户需要播客的内容，Podwise 占据 50% 市场，那也有 1w 订阅，按 $9.9 月订，也可以做到百万美金 ARR。
+在选定产品方向之后，我们做了一次市场调研。根据 [eMarketer](https://www.insiderintelligence.com/content/global-podcast-listener-forecast-2021-2025) 和 [PodcastIndex](https://podcastindex.org/) 的数据, 2024 年全球播客市场的听众人数已经超过 5 亿人，但并不是说播客听众都会是 Podwise 的用户，因为播客的核心功能还是陪伴，而当前市面上大部分的播客也都是主打陪伴属性的，Podwise 所服务的硬核知识类的播客主要集中在 创业、投资、商业、历史和健康等类目。
 
-我们觉得百万美金左右是个挺适合的规模，再大一定会被巨头盯上，再小的话可能不足以养活团队，这个规模可能是个独立开发者的甜蜜点。
+我们假设全球 5 亿的播客受众有 10% 左右的重度用户，而这 10% 的重度用户中又有 10% 会喜欢收听 “硬核知识” 播客，那就是 500 万左右的受众。那么 Podwise 只要能够转化 1% 左右的核心用户，就可以拿到 5 万个订阅用户，按年算 ARR 也有 350 万美金左右的市场，按毛利 60% 计算市场回报也超过 200 万美金。当然，上面所有的假设都是最保守的数字，对我们来说，粗算下来这是一个能支撑小团队的市场规模，那我们就可以干。
+
+我们回过头来看看播客市场的供给，根据 [PodcastIndex](https://podcastindex.org/) 的数据，当前还在活跃的播客有 400 万以上。
+
+![podcastIndex](/attachments/idea/podcastindex.png)
+
+而平均一个人收听播客的时长为 6-7 小时，所以大量的播客其实是无法被用户收听到的。同时我们也注意到一个现象，像 Joe Rogan、Huberman、Lex Fridman 等头部播客的时长越来越长，动辄 3-4 个小时。所以注定有海量的播客内容其实是无法被广泛消费的。那么在 400 万活跃播客 和 每人最多 6-7 小时的收听时长之间就存在一个巨大的供给与消费的鸿沟，所以这里存在机会。而 Podwise 为这种鸿沟提供了解决方案，就是加速消费播客内容。当然方式也不止这一种，在这种情况下，在供给端，播客主理人们也会想尽办法来让自己的内容更多的触达给用户，那这里面一定也存在机会。
+
+另外我们也横向对市场上 Podwise 的上下游产品做了些调研，其中就包括 Readwise，Readwise 作为当前最火的第二大脑中枢型产品，在创始人 2022 年的[分享](https://twitter.com/deadly_onion/status/1578831165561049089)中我们得知 Readwise 的 ARR 为 350 万美金，合理推测现在应该已经突破 500 万美金 ARR，用了将近 7 年的时间。如果我们也能像 Readwise 一样 Scale 顺利的话，合理推测，我们会在 3 年左右的时间达到 100 万美金 ARR。这对小团队来说也会是一个比较舒服的状态。
+
+在经过这番调研过后，我们认为这个市场规模是足够支撑我们团队发展的，并且这个规模可能还是独立开发者们选择市场的一个甜蜜点。再小的话不足以养活一个团队，大一些的话将来一定会面临巨头的竞争，因为我们缺乏团队和技术的优势，所以有极大可能在竞争中落败。
