--- a/pages/preface.mdx
+++ b/pages/preface.mdx
@@ -10,7 +10,7 @@ title: 前言
 
 ### 我们为什么要做 Podwise？
 
-在经历了 10 年企业服务创业的洗礼后，我们决定从 to B 的生意中跳脱出来。也是因为机缘巧合的关系，有幸拜读了 Gumroad 创始人 Sahil Lavingia  的书 [The Minimalist Entrepreneur](http://https--jd--hooos--com.proxy.shaanxi.gov.cn/g-10089392354625/)，让我们觉得，做独立开发者似乎也是一条不错的路。
+在经历了 10 年企业服务创业的洗礼后，我们决定从 to B 的生意中跳脱出来。也是因为机缘巧合的关系，有幸拜读了 Gumroad 创始人 Sahil Lavingia  的书 [The Minimalist Entrepreneur](https://www.amazon.com.au/Minimalist-Entrepreneur-Great-Founders-More/dp/0593192397)，让我们觉得，做独立开发者似乎也是一条不错的路。
 
 在经历几个月的 Gap 之后，我们以播客的形式开始重新切入市场，制作了一款针对 Indie Hacker 的播客「硬地骇客」，名字取自 Indie Hacker 的中文音译，“硬地”也充分表达了独立开发本身的难度极高。
 
