--- a/pages/conclusion/learn.mdx
+++ b/pages/conclusion/learn.mdx
@@ -4,7 +4,7 @@ title: 还会坚持干的几件事
 
 Podwise 到今天，还远没有成功，但我们认为产品应该度过了 0-1 的 PMF 阶段。过程中运气也占了很大的比例，我们在这里也不是在尝试总结，而是在充分讨论后，我们认为：如果还有下一个产品要做，我们会坚持的几件事：
 
-首先一定是从社区出发，经过「硬地骇客」播客和 Podwise 的经历，我们对于 Sahil Lavingia  的书 [The Minimalist Entrepreneur](http://https--jd--hooos--com.proxy.shaanxi.gov.cn/g-10089392354625/) 认识更加深刻，通过尽可能的与社区成员交流，解决他们的问题，对于产品在第一时间找到客户非常重要。独立开发这件事最忌讳的就是想象用户需求，很多人在不断的想象需求，构建，放弃中逐渐迷失了。所以，深入社区是一定要做的。
+首先一定是从社区出发，经过「硬地骇客」播客和 Podwise 的经历，我们对于 Sahil Lavingia  的书 [The Minimalist Entrepreneur](https://www.amazon.com.au/Minimalist-Entrepreneur-Great-Founders-More/dp/0593192397) 认识更加深刻，通过尽可能的与社区成员交流，解决他们的问题，对于产品在第一时间找到客户非常重要。独立开发这件事最忌讳的就是想象用户需求，很多人在不断的想象需求，构建，放弃中逐渐迷失了。所以，深入社区是一定要做的。
 
 另外非常重要的一点是快速发布，我们很庆幸在 beta 测试的时候，客户给我们提了计费方式的问题，我们才在这个过程中对方案进行了修改，并且添加了趋势页面，如果再过两个月，我们做的更成熟直接发布，那可能会损失很大一部分流量。所以，确认 MVP，让产品尽快与客户见面，寻求反馈，快速迭代，是我们永远追求的链路。
 
