add more detail of community

--- a/pages/idea/community.mdx
+++ b/pages/idea/community.mdx
@@ -10,8 +10,14 @@ title: 从社区出发
 
 点子库的内容大家可以看到，要不然是跟独立开发者相关，要不然跟播客相关。这些是我们分析过后可以横跨的两个圈子。我们认为基于自己的圈子，才有可能做出长久且优质的产品。
 
-播客内容的分析这件事的点子来源也挺神奇，我们团队有家人很喜欢听音频课程，类似于得到等平台，并且有记录笔记的需求。之后我们也发现一个很有意思的现象，很多成功的产品，都是从自己身边的家人发觉出来的，尤其是爱人。如果大家有做产品的需求，也可以从爱人的痛点需求多多挖掘。
+其实播客剪辑也是来自我们自己很大的一个痛点，因为要制作「硬地骇客」这款播客，所以我们在播客设备和剪辑上都下了很大的功夫，传统的剪辑工具是基于音轨的剪辑方法，在剪辑的过程中一定边听边剪，所以剪辑时长与播客的时长一般有一个比例关系，大概要花费在 2～3 倍的时间。我们在准备这个 idea 的时候市面上已经有 descript 了，他们主打做 AI 播客剪辑，但可惜的是没有中文，同时也没有录制环节。我们在规划的时候希望从录制开始，到制作完成发布，完成整个流程，因为只有这样对用户来说才是效率最高的。但你可能也会发现，这样的产品会带来一个问题，你只有打通整个链路之后效率的提升才有体感，以我们团队的人力如果要做到这样的程度需要花费至少 6 个月的开发时间才有可能达成 MVP，这显然会有极大的风险。另外播客剪辑在原有赛道的选手，比如 Adobe 已经在跃跃欲试，并且在尝试 AI 剪辑的部分，这也是其中的一个风险。最后海外除了 descript 之外，还有包括 Podcastle、Riverside、Zencastr 等之前主要关注录制的创业公司，也因为这轮 AI 的发展把自己的触角往 AI 制作方向延伸了，尤其是上面提到的这三家在最近都完成了一轮融资，我们如果要跑的更快如果我们不走融资渠道的话，基本很难追赶了。基于这三点的原因，我们还是放弃了这个 idea。这可能是个很好的 idea，但是不适合我们这样的团队。
 
-至于为什么最终选择了 AI 播客的内容，首先来源于现实的需求，例如：「纵横四海」「Huberman lab」「Lex fridman podcast」等内容的听众的笔记需求。其次 AI 相关，风口上的猪也能飞起来。最后与我们听众会有交叉，可以通过播客的影响力传播。当然也许现在也算是证明了我们当时的判断，但回看的话也有点运气的成分在。
+关于开发者这个群体的产品我们为什么没选，主要还是因为 女人、孩子、老人、宠物到男人的排序中，开发者核心群体的男性的消费能力最低，并且冲动消费最少，买东西都要货比三家。同样是笔记，可以看到知乎和小红书现在的发展差距越拉越大。所以，虽然我们所在的社区是开发者，但本身我们并不想赚开发者的钱，或者换个说法，我们觉得自己没有这样的能力。所以也就暂时放弃了这些相关的 idea。
 
-至于 Podwise 为什么会有这个名字也挺有意思。我们当时有两个名字备选：HardPod / Podwise。HardPod 是因为有播客转录需求的播客本身都是知识型硬核播客，硬核也就是 Hardcore。而 Podwise 的名字其实是碰瓷 Readwise 产品，Readwise 是现今知识管理的中枢型产品。我们其实一开始都倾向于 HardPod 这个名字，但还是有些犹豫。直到有一天我们咨询了一个英语的 Native Speaker，他告诉我们 HardPod 这个名字一听就联想到某物，问完我们都长舒一口气，还好问了一下，至此，Podwise 的名字才被确定。
+至于为什么最终选择了 AI 播客的内容，首先来源于现实的需求，例如：「纵横四海」「Huberman lab」「Lex fridman podcast」等内容的听众的笔记需求。这些需求是怎么被发掘的，我们发现在即刻和小红书经常会有人发播客笔记，因为播客是音频产品，无法搜索和快速通览，所以在这些平台就出现了很多课代表，其实课代表就是代总结，代提炼的过程，而这个提炼的结果中尤其受欢迎的内容就是脑图。那么既然有这么多人工课代表，那我们 AI 课代表一定有需求，只是我们到底能达到人工的几成而已。另外我们还发现，大部分发布总结的人群都为女性高知用户，可能女性用户对于知识的整理有天然的冲动，而这样的人群画像的购买力也是最强的。其次是 AI 相关，风口上的猪也能飞起来，这句话绝对不是空话。因为 ChatGPT 所带来的这个风潮绝对是一个历史级别的机遇。而且 ChatGPT 还给大家带来一个认知，AI 是有成本的。之前的 SaaS 在用户付费的时候可能会存在一些价值困境，用户会觉得你扩展的成本几乎为 0，所以费用上就会觉得贵。但今天一旦用户知道产品背后有 AI 的支持，那 20 美元的 ChatGPT 对用户就有很强的心理锚定效应。AI 产品等于需要付费这个概念根深蒂固之后，对于产品是非常好的机会，我们要做的只是大胆收费就可以了。最后，跟我们最相关的，我们还有一个 3000 订阅的播客节目，我们可以用自己播客节目来宣传 AI 播客，虽然我们播客的用户画像与播客笔记的画像有所不同，但至少我们不会是从 0 开始。所以我们分析过后一致选择了 AI 播客赛道。
+
+当然也许现在也算是证明了我们当时的判断，但回看的话主要还是要归功于运气。
+
+这里面还有一个小插曲，为什么 AI 播客产品的名字最后取名叫 Podwise。其实我们当时有两个名字备选：HardPod 和 Podwise。HardPod 是因为有笔记需求的播客本身都是知识型的硬核播客，硬核也就是 Hardcore，HardPod 很自然就是硬核播客的意思。而 Podwise 的名字的灵感来源其实是 Readwise，Readwise 是现今知识管理的中枢型产品，Readwise 这个名字起的也很好，仿佛用了产品之后人就可以智慧起来。那我们是 Podcast 产品，所以就拟定了一个 Podwise 的名字。
+
+我们其实一开始都倾向于 HardPod 这个名字，以至于 Github 的仓库很长的时间都叫 hardpod-website，而且 HardPod 还与 HardHacker 有个呼应关系。但又觉得 Podwise 对于出海用户更直觉一些，大家一下就能想到这个产品的用途。最后为了确认最终的名字，我们决定针对 native speaker 做一个产品名的测试，把 HardPod 和 Podwise 给他们，让他们猜一下这个产品是干嘛的？直到一个朋友告诉我们 HardPod 这个名字一听就非常的“性感”，问完我们都长舒一口气，还好问了一下，至此，Podwise 的名字才被确定。
