make mvp more detailed

--- a/pages/idea/mvp.mdx
+++ b/pages/idea/mvp.mdx
@@ -2,16 +2,25 @@
 title: MVP MVP MVP
 ---
 
-产品目标确定之后，我们优先确认了用户故事。
+产品目标确定之后，我们优先需要确认用户故事。即我们需要给有听播客、记笔记需求的用户，设计一个路径，能够让他们达成目标。
 
-![user story](/attachments/idea/userstory.png)
+在这里我们使用了一个 User-Story Mapping 的图表，它是敏捷团队在长期规划用户故事中所创造出来的一个工具，能够帮助我们更好的思考用户的使用路径。这个工具要使用起来非常简单，它把用户的行为划分为三个层级，即：活动、步骤和细节，他们三者是依次拆解的关系。即通过活动来拆解具体的步骤，再根据每个步骤来确认细节。当然工具只是辅助我们进行思考的工具，核心还是业务，用户到底是如何使用产品的？
 
-即我们需要思考有听播客、记笔记需求的用户，什么方式是他们习惯的？由于我们的目标客户是听播客人群的细分，所以我们在产品形态上选择了用播客播放器的形态来做。而并没有选择很多 AI 产品通过做浏览器插件的形式，我们觉得这有些违背大家的使用习惯。在这个前提之下，我们将故事划分为三块：
+我们尝试描绘一下用户使用的过程：
+用户被 landing page 的展示内容所吸引，通过 Google 直接登陆系统，但这时候因为用户没有处理过任何节目，所以无法查看 AI 处理过的播客节目。所以系统需要引导用户来转录内容，用户可以直接搜索节目来处理，或者用户通过搜索 Podcast，来找节目并处理。因为节目的处理需要 3 分钟起步的时间，所以这里需要异步通知用户。通知之后用户进入平台看到 AI 处理的内容，包括 总结、大纲、脑图、金句等，当然最重要的是逐字稿，这个是所有内容能产出的基石。在 AI 产出笔记之后，用户可以选择将 AI 笔记推送至自己的笔记本中，比如 Notion 和 Readwise 等。这样就完成了一次完整的用户旅程。当然后续用户可以通过订阅 Podcast 的形式，即时收到新的节目中已处理的笔记。但这属于优化体验了，我们上面描述的这个过程是一个用户要完成 AI 处理播客的必经之路，不能缺乏其中任何一项。
 
-Choose a Plan -> Subscribe Podcast -> Share Knowledge
+做完用户故事的描述，我们尝试将故事整理进 User-Story Mapping 表中，在活动层级中，我们将用户划分为三大主要的活动：Choose a Plan -> Subscribe Podcast -> Share Knowledge。同时也为细节设置了优先级，比如在 Be User 中，我们可以让用户用 Google 和 Email 注册，但用 Apple 的话就可以放在后续有时间再实现。根据我们讨论过后，就形成了下面这张 Mapping：
 
-即用户可以通过直接订阅播客的形式，在播客更新时及时获得 AI 相关的总结和脑图等分析内容。并且可以及时分享。 可以看到，Podwise 与传统播客播放器最主要的区别其实在 Share Knowledge 这一步，通过最小惊讶，让用户能够快速上手产品。而 Podwise 与传统产品对比的最大亮点上：我们重点强调了 Mindmap 的重要性，我们认为脑图是能快速了解内容一个非常有效的组织形式。当然，笔记的内容我们选择性的接入了 Notion 和 Readwise 两大平台。
+![userstory](/attachments/idea/userstory.png)
 
-我们认为只要达成这个路径，用户便可以进入平台并享受 AI 带来的便利。
+大家可以发现，我们在思考用户活动的时候用的都是必备路径，而不是事无巨细的全量路径。那是因为，我们不可能在一开始就想清楚产品的全貌，好产品都是与用户磨合出来的。而我们在产品初期，最重要的事情就是快速交付 MVP(Minimum viable product) 最简可行产品，因为在这时候，所有的东西都是我们脑子构建出来的，没有任何用户参与。所以我们需要尽快让用户能够参与进来，来帮助我们验证产品是否真的可行。而构建 MVP 的核心，则需要我们高度提炼用户故事的必备路径，这里有张经典的 MVP 图：
 
-在做完产品的 MVP 以及价值主张之后，我们开发了 Podwise 的 Landing Page，并开放了邮件申请 Waitlist，之后就进入了开发阶段。
+![mvp](/attachments/idea/mvp.png)
+
+我们的目标是制造一个载具，所以在迭代的过程中每个版本都要交付能载人的工具，而不是每个版本都制造一个零件，等到最后再拼起来。因为长时间的交付，极有可能出现我们规划的是给用户造辆车，但其实用户真正想要的是船，那整个产品可能就需要在 6 个月后完全从头转型，那就意味着要完全失败了。
+
+另外如果是工具类的产品，比较忌讳的就是一上来就大而全。大而全的产品本质上还是没找到产品的卖点，而大而全就是最偷懒的做法，但往往海外用户不喜欢大而全。
+
+如果你在用户故事精简过后，在第一个 MVP 中没有找到太多产品亮点，那么可能要思考一下这个产品是否值得做？产品在市场上到底有什么差异性？没有差异性就很难让用户产生记忆点，而记忆点就没有品牌，最终就很容易被遗忘。所以模仿并不是一个好的方法，可以借鉴但不要抄袭。品牌本身是有先发优势的。
+
+最后由于我们的目标客户是听播客人群的细分，所以我们在产品形态上选择了用网站的形态来做。而并没有选择很多 AI 产品通过做浏览器插件的形式，我们觉得这有些违背笔记的使用习惯。并且因为在前期做了一些市场调研，我们的竞品因为之后手机客户端，所以也有用户抱怨的声音存在，这也是我们选择从网站开始的原因之一。
