rewrite strategy part

--- a/pages/conclusion/fault.mdx
+++ b/pages/conclusion/fault.mdx
@@ -12,6 +12,6 @@ title: 最不应该犯的错误
 
 虽然 Podwise 是一个订阅制的产品，而海外的订阅制一般只支持 Apple、Google、Paypal 和银行卡订阅这四种，但假如不订阅的话，包括微信和支付宝等方式也是可以支付的。在开始我们只支持了订阅的方式，在黑五大促的事后，因为销售量飙升，我们在各个渠道突然接到了大量无法付款的反馈，这才让我们反应过来，之前可能大量购买都被挡在了支付环节。考虑到这一点，我们用最快速的方式支持了 One-time 也就是一次性支付，也因为一次性支付的支持，顺道我们也支持了支付宝和微信支付。但即使最快，这次改动也只赶上了我们黑五活动的尾巴，当然我们损失了部分用户。后续我们紧急补了一次 Cyber Monday 也就是网络星期一的活动，并告知我们已支持更多的支付方式，在这次 Cyber Monday 的活动中也挽回了部分用户。知道今天，One-time Payment 在我们所有支付的比例中仍然占据 30% 的份额。所以，关注用户的支付习惯，不用教条的追求“订阅”，降低用户付款的难度，一定要重点关注。
 
-自从 Podwise 发布过后，突然就出现了十几二十家投资机构对产品感兴趣，我们开始还有点沾沾自喜，觉得自己做的产品有价值所以很多人关注，证明自己做对了。但与众多投资人聊过之后，我们才发现不是的。在当前 AI 创业火爆的大背景下，很多投资人也陷入了 FOMO 的情绪中，开始频繁找项目聊，但因为当前国际局势的关系，美元基金已经全面退潮了，人民币基金背后的 LP 又多为政府，所以大家出手都非常谨慎。造成的结果是，大量的投资人只是找项目来聊确保自己能跟上时代而已，说白了，只是利用自己投资人的光环来找项目学习。为什么如此确定？因为在跟我们聊的过程中很多人根本没有用过 Podwise，这是很令人沮丧的。尤其还有一个国内大厂的战投基金，竟然拉着公司的部门轮番跟我们交流，在交流玩一个后，我们果断拒绝了后续的沟通。
+自从 Podwise 发布过后，突然就出现了十几二十家投资机构对产品感兴趣，我们开始还有点沾沾自喜，觉得自己做的产品有价值所以很多人关注，证明自己做对了。但与众多投资人聊过之后，我们才发现不是的。在当前 AI 创业火爆的大背景下，很多投资人也陷入了 FOMO 的情绪中，开始频繁找项目聊，但因为当前国际局势的关系，美元基金已经全面退潮了，人民币基金背后的 LP 又多为政府，所以大家出手都非常谨慎。造成的结果是，大量的投资人只是找项目来聊确保自己能跟上时代而已，说白了，只是利用自己投资人的光环来找项目学习。为什么如此确定？因为在跟我们聊的过程中很多人根本没有用过 Podwise，这是很令人沮丧的。尤其还有一个国内大厂的战投基金，竟然拉着公司的部门轮番跟我们交流，在交流完一个后，我们果断拒绝了后续的沟通。
 
 在自从认识到这一点之后，我们内部制定了一条规则，我们只跟 Podwise 的年订投资人聊，我们将沟通当成用户访谈。这样对我们来说也公平了。最后，我们建议大家不要浪费太多时间在投资人身上，有这个时间，不如多去关心一下自己的客户。
