--- a/pages/grow/monetize.mdx
+++ b/pages/grow/monetize.mdx
@@ -8,7 +8,7 @@ title: 意料之外的爆发
 
 结果在即刻 和 X 平台上形成了非常好的传播效应，（小红书因为审核的关系无法透出优惠信息，所以不太利于传播。）在短短三天的时间里面，就卖出将近 150 份订阅，其中绝大部分是年订，一举突破了 $10000 ARR，事后来看这是一次非常成功的活动，但回过头来看确实非常偶然。我们试图找到一些偶然背后的必然，其中非常重要的一项应该是定价：
 
-Podwise 的定价是 $9.9 一个月，年订的话折算到月 $5.9，按人民币计价的话超过 ¥40 人民币，这对于国内用户来说是有些偏高的，对比国内付费渗透率较高的应用来说，年订 ¥298 已经是很多产品上限，可以注意网盘和视频会员，他们定价大多都在 ¥198-¥298 之间。而 Podwise 的年订价格是超过 ¥500 的，这对于一部分是是有一定疑虑的，当然这是针对国内市场的定价问题，对于国外来说，9.9 的定价本身不存在问题。
+Podwise 的定价是 $9.9 一个月，年订的话折算到月 $5.9，按人民币计价的话超过 ¥40 人民币，这对于国内用户来说是有些偏高的，对比国内付费渗透率较高的应用来说，年订 ¥298 已经是很多产品上限，可以注意网盘和视频会员，他们定价大多都在 ¥198-¥298 之间。而 Podwise 的年订价格是超过 ¥500 的，这对于一部分是是有一定疑虑的，当然这是针对国内市场的定价问题，对于国外来说，$9.9 的定价本身不存在问题。
 
 通过 3.5 折左右的折扣，我们将 Podwise 的年订价格降到了 ¥25 左右，这样结合用户对于 AI 高成本的预期，比较成功的实现了一次势能转换，为什么将是势能转换，主要是将前期的一些品牌曝光度，美誉度等等在一次活动中的集中变现。
 
