--- a/pages/grow/strategy.mdx
+++ b/pages/grow/strategy.mdx
@@ -2,14 +2,18 @@
 title: 到杠杆高的地方去做宣传
 ---
 
-Podwise 遵循 0 成本宣传策略，毕竟是白手起家，本身也没什么钱去投入到营销中。但在过程中，我们还是总结了一些经验，尤其是一些起号的经验是特别值得分享的。
+Podwise 遵循 0 成本宣传策略，毕竟是白手起家，本身也没什么钱去投入到营销中。在这种情况下我们就得特别注意方法，不然很有可能事倍功半。
 
-首先我们认为，营销一定要去杠杆高的地方，也就是 KOC、KOL 多，而且有很好的流量发现机制的平台。
+首先我们认为，营销一定要去杠杆高的地方，而且有很好的内容发现机制的平台。
 
-Podwise 正式的宣发是从「硬地骇客」的播客开始的，我们用自己的播客节目，宣传 Podwise 这个播客相关的产品，主打一个精准推广：
+在传统的社交媒体上，你的影响力辐射半径就是关注自己的粉丝，如果没有粉丝，那么内容就无法被传播。在项目前期我们肯定没有粉丝，这就会让宣传陷入僵局。所以对于独立团队来说，最适合我们的其实是类似于论坛的地方，因为论坛对于所有发帖人来说是公平的，都有被关注到的机会。比如小红书，有标签机制可以被发现；再比如即刻，它虽然是粉丝驱动，但是可以将内容发送至小组，这样也可以被发现；还有类似 Reddit，天然就是一个论坛，只要不违规，所有人的帖子都可以被看到。有什么不太适合我们一开始投入太多精力的地方，比如微博，他的内容发现机制很弱，还有 Twitter，没有粉丝内容几乎很难传播，视频内容包括抖音，虽然给新号一定的发现机会，但整体来说几率还是太低。这些平台适合我们做品牌营销，通过官方网站来引导用户关注，来巩固自己的客群。
 
-[EP29 三个人三个月的故事：我们的第一个作品 Podwise！](https://www.xiaoyuzhoufm.com/episodes/651188ea19dde7bf6a86a57f)
+那什么是高杠杆的地方，高杠杆其实是指 KOL/KOC 比例高的地方，如果要宣传播客，那么最好的渠道应该是即刻的「一起听播客」小组了，这里面有播客听友，同时还有大量的播客节目主理人，他们中的很多人就是播客领域的 KOL，所以影响他们就可以顺带影响一批人。另外还有一些平台虽然他们不是 KOL，但是因为平台的流量机制，导致每个人的帖子都有可能形成广泛的传播，在这种平台去做宣传也是一个很好的渠道。即虽然受众不是 KOL，但形成的二次传播都可能等同于一次 KOL 的传播。
 
-经过本期节目，我们的营销历程算是正式开始了，并且在上线当天我们就完成了销售，算是开门红。
+而低杠杆的平台比较适合做品牌和用户反馈，比如用户会下意识的去 Twitter、微博等平台找产品的官方账号，一方面看产品有什么最新的进展，更重要的是反馈问题等，而这些平台因为私信等功能其实还是比较适合做这样的功能的。所以对 Podwise 来说低杠杆的平台我们会主要做官方内容的宣发以及及时的问题反馈。
 
-因为 Podwise 是一个播客产品，所以从我们的角度，我们需要找到听播客人群最多的地方，如果有主播就更好了。在国内，最好的播客平台是小宇宙，而最好的播客交流平台是即刻的 “一起听播客” 群组，所以自然而然，即刻就是我们在国内宣传的主要渠道。另外小红书是一个人人都能🔥一次的平台，虽然小红书没有那么容易涨粉，但是流量机制会倾向于给新人机会，如果账号做到一定粉丝数反而倾向于让你投流才能获得流量。
+总结一下，我们认为在前期我们最需要时通过论坛来做内容营销转化，有一定用户基础之后，再发力做品牌营销来巩固用户。
+
+另外我们认为，对于独立开发者来说，除了用产品的方式来做内容营销，还可以通过 build in public 的方式来做人设营销，build in public 是一种将自己打造产品的过程全程公开的一种营销方式，它是我们 MVP 在营销领域的延伸。之前我们在强调 idea 的时候都是自己在构建用户故事，其实我们也可以用 build in public 的方式在自己的社交平台将这部分内容公开出来，这样会吸引对产品有兴趣的朋友的关注，也可以得到他们尽快的反馈。而 build in public 作为一种新兴的营销方式，为什么会成为很多独立开发者说践行的策略，其中很重要的一个原因是大众对于这部分内容天然的好奇，尤其是有独立开发者在分享自己的营收时，公众会格外关心。所以 build in public 最热门的内容，就是当前产品产生了多少 MRR / ARR。而 build in public 不光会对当前的产品有积极的影响，更重要的是积累了自己的粉丝之后，可以通过个人影响力去打造下一个产品，因为毕竟一个产品就直接成功肯定是少数。而一旦积累了个人影响力，就可以不断通过产品来变现，这也是更长久的生意。我们看到，很多海外 Twitter 上的独立开发者，他们本身就已经是网红了。1000 个铁杆粉丝就可以养活自己，假如你有 2万粉丝，5% 铁杆就足够了。
+
+我们比较建议如果要为“独立”做长期打算的开发者，可以试试用 build in public 的方式。
