--- a/pages/grow/tactics.mdx
+++ b/pages/grow/tactics.mdx
@@ -2,6 +2,14 @@
 title: 互动、回复、关注长尾
 ---
 
+Podwise 正式的宣发是从「硬地骇客」的播客开始的，我们用自己的播客节目，宣传 Podwise 这个播客相关的产品，主打一个免费精准：
+
+[EP29 三个人三个月的故事：我们的第一个作品 Podwise！](https://www.xiaoyuzhoufm.com/episodes/651188ea19dde7bf6a86a57f)
+
+经过本期节目，我们的营销历程算是正式开始了，并且在上线当天我们就完成了销售，算是开门红。
+
+因为 Podwise 是一个播客产品，所以从我们的角度，我们需要找到听播客人群最多的地方，如果有主播就更好了。在国内，最好的播客平台是小宇宙，而最好的播客交流平台是即刻的 “一起听播客” 群组，所以自然而然，即刻就是我们在国内宣传的主要渠道。另外小红书是一个人人都能🔥一次的平台，虽然小红书没有那么容易涨粉，但是流量机制会倾向于给新人机会，如果账号做到一定粉丝数反而倾向于让你投流才能获得流量。
+
 因为即刻是个小众平台，所以涨粉相对困难，但因为 KOL / KOC 的比例很高，所以在设计即刻起号的过程中我们强调了互动的重要性，因为免费用户不能转录，只能查看会员和平台已转录的播客，每个月 4 期，所以我们提出了免费转录的方案，当然方案由即刻动态与 @Podwise 账号达成，这样就比较容易的达成了二次传播，这个活动在后续一个月的时间里，持续的为 Podwise 即刻账号带来了关注和互动。回看还是个非常不错的营销策略。
 
 ![engagement](/attachments/grow/engagement.png)
