add producthunt and build in public part of strategy

--- a/pages/grow/strategy.mdx
+++ b/pages/grow/strategy.mdx
@@ -14,6 +14,10 @@ Podwise 遵循 0 成本宣传策略，毕竟是白手起家，本身也没什么
 
 总结一下，我们认为在前期我们最需要时通过论坛来做内容营销转化，有一定用户基础之后，再发力做品牌营销来巩固用户。
 
-另外我们认为，对于独立开发者来说，除了用产品的方式来做内容营销，还可以通过 build in public 的方式来做人设营销，build in public 是一种将自己打造产品的过程全程公开的一种营销方式，它是我们 MVP 在营销领域的延伸。之前我们在强调 idea 的时候都是自己在构建用户故事，其实我们也可以用 build in public 的方式在自己的社交平台将这部分内容公开出来，这样会吸引对产品有兴趣的朋友的关注，也可以得到他们尽快的反馈。而 build in public 作为一种新兴的营销方式，为什么会成为很多独立开发者说践行的策略，其中很重要的一个原因是大众对于这部分内容天然的好奇，尤其是有独立开发者在分享自己的营收时，公众会格外关心。所以 build in public 最热门的内容，就是当前产品产生了多少 MRR / ARR。而 build in public 不光会对当前的产品有积极的影响，更重要的是积累了自己的粉丝之后，可以通过个人影响力去打造下一个产品，因为毕竟一个产品就直接成功肯定是少数。而一旦积累了个人影响力，就可以不断通过产品来变现，这也是更长久的生意。我们看到，很多海外 Twitter 上的独立开发者，他们本身就已经是网红了。1000 个铁杆粉丝就可以养活自己，假如你有 2万粉丝，5% 铁杆就足够了。
+我们再聊一下 ProductHunt 的 Launch，很多人把在 ProductHunt 的发布看的比较重，觉得能从这次发布中直接获取大量的用户，并借此获得不菲的营收。但其实往往是事与愿违的。因为 ProductHunt 网站的核心用户其实是产品经理和开发者，如果你的产品面向的用户是他们，那有可能，但大部分的产品其实是面向普通用户的，所以客群不匹配结果可想而知。而且现在 ProductHunt 因为这次 AI 产品的爆发，每天有大量的产品发布，而排行榜的日榜前三往往需要 800 票以上，这以自然流量转化到 upvote 上几乎是不可能的。所以最终发布在拼的其实不是产品力，而是人脉。对，ProductHunt 有很多 Telegram，Facebook，Linkedin 甚至包括微信的 upvote 群，如果你的发布没有这些群的帮助，那可能非常难排到前三。
+
+说了这么多 ProduntHunt 的问题，那为什么还有这么多人冲着去发布。那是因为有很多 KOL，尤其是科技产品领域，因为制作内容的关系，他们会关注 ProductHunt 的日榜和周榜，并制作相关内容来获取粉丝关注，这就是 Producthunt 的意义。如果你之前发布过 ProductHunt，但却觉得没什么效果，那可能是因为你没有被他们说关注到。所以 ProductHunt 的意义并不是直接获取用户，而是通过日榜和周榜前三来获取 KOL 的关注，形成二次传播。这其实也是高杠杆的意义所在。
+
+最后我们还认为，对于独立开发者来说，除了用产品的方式来做内容营销，还可以通过 build in public 的方式来做人设营销，build in public 是一种将自己打造产品的过程全程公开的一种营销方式，它是我们 MVP 在营销领域的延伸。之前我们在强调 idea 的时候都是自己在构建用户故事，其实我们也可以用 build in public 的方式在自己的社交平台将这部分内容公开出来，这样会吸引对产品有兴趣的朋友的关注，也可以得到他们尽快的反馈。而 build in public 作为一种新兴的营销方式，为什么会成为很多独立开发者说践行的策略，其中很重要的一个原因是大众对于这部分内容天然的好奇，尤其是有独立开发者在分享自己的营收时，公众会格外关心。所以 build in public 最热门的内容，就是当前产品产生了多少 MRR / ARR。而 build in public 不光会对当前的产品有积极的影响，更重要的是积累了自己的粉丝之后，可以通过个人影响力去打造下一个产品，因为毕竟一个产品就直接成功肯定是少数。而一旦积累了个人影响力，就可以不断通过产品来变现，这也是更长久的生意。我们看到，很多海外 Twitter 上的独立开发者，他们本身就已经是网红了。1000 个铁杆粉丝就可以养活自己，假如你有 2万粉丝，5% 铁杆就足够了。
 
 我们比较建议如果要为“独立”做长期打算的开发者，可以试试用 build in public 的方式。
