rename title and fix some typo

--- a/pages/idea/community.mdx
+++ b/pages/idea/community.mdx
@@ -2,7 +2,7 @@
 title: 从社区出发
 ---
 
-在产品这条路上我们为什么看中 Podwise 所面向的播客市场，这个的思路来源完全践行了 [The Minimalist Entrepreneur](https://www.amazon.com.au/Minimalist-Entrepreneur-Great-Founders-More/dp/0593192397) 的强调的从社区出发，看到团队积累的 3000 多订阅用户，我们想是否能给他们做些产品？如果不能，那是否可以在播客领域做些什么？从自身和身边出发。
+在产品这条路上我们为什么看中 Podwise 所面向的播客市场，这个的思路来源完全践行了 [The Minimalist Entrepreneur](https://www.amazon.com.au/Minimalist-Entrepreneur-Great-Founders-More/dp/0593192397) 的强调的从社区出发，看到播客积累的 3000 多订阅用户，我们想是否能给他们做些产品？如果不能，那是否可以在播客领域做些什么？从自身和身边出发。
 
 所以我们团队脑暴了一个点子库：
 
