--- a/pages/idea/mvp.mdx
+++ b/pages/idea/mvp.mdx
@@ -23,4 +23,4 @@ title: MVP MVP MVP
 
 如果你在用户故事精简过后，在第一个 MVP 中没有找到太多产品亮点，那么可能要思考一下这个产品是否值得做？产品在市场上到底有什么差异性？没有差异性就很难让用户产生记忆点，而记忆点就没有品牌，最终就很容易被遗忘。所以模仿并不是一个好的方法，可以借鉴但不要抄袭。品牌本身是有先发优势的。
 
-最后由于我们的目标客户是听播客人群的细分，所以我们在产品形态上选择了用网站的形态来做。而并没有选择很多 AI 产品通过做浏览器插件的形式，我们觉得这有些违背笔记的使用习惯。并且因为在前期做了一些市场调研，我们的竞品因为之后手机客户端，所以也有用户抱怨的声音存在，这也是我们选择从网站开始的原因之一。
+最后由于我们的目标客户是听播客人群的细分，所以我们在产品形态上选择了用网站的形态来做。而并没有选择很多 AI 产品通过做浏览器插件的形式，我们觉得这有些违背笔记的使用习惯。并且因为在前期做了一些市场调研，我们的竞品因为只有手机客户端，所以也有用户抱怨的声音存在，这也是我们选择从网站开始的原因之一。
