make chapters more robust

--- a/pages/authors.mdx
+++ b/pages/authors.mdx
@@ -1,3 +1,11 @@
 ---
 title: 作者
 ---
+
+本书的作者是「硬地骇客」社区，硬地骇客即 Indie Hacker 的意译。
+
+硬地骇客社区核心成员由三位拥有10年+互联网创业者组成，我们关注前沿科技，分享创业故事，打造 “超级个体”，寻找利基市场，构建小而美的生意，同时也希望和广大 Hacker 一起探讨技术、产品和商业之美。我们正在努力探索一条能够同时实现财务、时间和身体自由的道路，希望能够通过 Podcast 将我们的故事分享给大家。
+
+硬地骇客是一群追求自由充实的生活并喜欢挑战的 Builder，热爱技术，构建产品，崇尚依靠产品驱动的增长方式构建出自己的小生意。 如果你也喜欢这些信条，欢迎加入我们硬地骇客社区。
+
+我们坚信：“每个人都应该拥有一个小生意”。
