--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,3 +3,47 @@ title: 简介
 ---
 
 ![ARR](/attachments/other/ARR.png)
+
+本书是关于 [Podwise](https://podwise.ai) 产品从灵感到变现过程的忠实记录以及复盘。
+
+全书以产品的全生命周期划分为 5 个部分：
+
+<details open>
+  <summary>💡 灵感</summary>
+
+  * 从社区出发
+  * 百万美金的利基市场
+  * MVP MVP MVP
+</details>
+<details open>
+  <summary>🛠 构建</summary>
+
+  * 设计与开发一体
+  * 用方便且擅长的技术栈
+  * 关于大模型必须知道的事
+  * 省下的都是赚的
+  * 能用的服务千万别做
+</details>
+<details open>
+  <summary>🚀 发布</summary>
+
+  * 最初的 200 个用户
+  * 永远跟用户站在一起
+  * 定价要关注成本
+</details>
+<details open>
+  <summary>💸 增长</summary>
+
+  * 到杠杆高的地方去做宣传
+  * 互动、回复、关注长尾
+  * 意料之外的爆发
+</details>
+<details open>
+  <summary>🤔 复盘</summary>
+
+  * 对远景的一些规划
+  * 最不应该犯的错误
+  * 还会坚持干的几件事
+</details>
+
+Podwise 今天的成绩远称不上成功，可能勉强算是找到 PMF (Product-Market Fit)，所以这不是一份权威指南，内容仅供参考。
