add knowledge planet for book

--- a/pages/authors.mdx
+++ b/pages/authors.mdx
@@ -8,4 +8,6 @@ title: 作者
 
 硬地骇客是一群追求自由充实的生活并喜欢挑战的 Builder，热爱技术，构建产品，崇尚依靠产品驱动的增长方式构建出自己的小生意。 如果你也喜欢这些信条，欢迎加入我们硬地骇客社区。
 
-我们坚信：“每个人都应该拥有一个小生意”。
+![knowledge planet](/attachments/other/planet.png)
+
+我们坚信：“每个人都应该拥有一个小生意”！
