--- a/pages/authors.mdx
+++ b/pages/authors.mdx
@@ -6,7 +6,16 @@ title: 作者
 
 硬地骇客社区核心成员由三位拥有10年+互联网创业者组成，我们关注前沿科技，分享创业故事，打造 “超级个体”，寻找利基市场，构建小而美的生意，同时也希望和广大 Hacker 一起探讨技术、产品和商业之美。我们正在努力探索一条能够同时实现财务、时间和身体自由的道路，希望能够通过 Podcast 将我们的故事分享给大家。
 
-硬地骇客是一群追求自由充实的生活并喜欢挑战的 Builder，热爱技术，构建产品，崇尚依靠产品驱动的增长方式构建出自己的小生意。 如果你也喜欢这些信条，欢迎加入我们硬地骇客社区。
+硬地骇客是一群追求自由充实的生活并喜欢挑战的 Builder，热爱技术，构建产品，崇尚依靠产品驱动的增长方式构建出自己的小生意。
+
+如果你也喜欢这些信条，欢迎加入我们「硬地骇客」的官方星球并参与本书的讨论：
+
+我们提供如下服务：
+
+1. 全年不少于 24 篇专题分享，内容包括但不限于 灵感 - 构建 - 发布 - 增长 - 复盘 等产品关键环节。
+2. 全年 50 期左右的「硬地骇客」播客文章版内容以及参考资料，通过文章的阅读体验可以在收听节目之后方便快速检索播客内容。
+3. 为支持社群会员的产品发展，社群为每位会员提供「硬地骇客」播客节目 Show Notes 广告位一次，价值 ¥500，可为产品提供高质量的站点外链，提升搜索引擎排名。
+4. 不定期的黑客马拉松赛事，优胜者可以获得包含现金奖励与项目孵化等合作项目支持。
 
 ![knowledge planet](/attachments/other/planet.png)
 
