correct typos in pages

--- a/pages/launch/acquire.mdx
+++ b/pages/launch/acquire.mdx
@@ -13,6 +13,6 @@ title: 最初的 200 个用户
 - 另一个是我们对于邮箱召回的期待过高，因为毕竟会经历 收件 - 打开 - 访问 - 注册 四个步骤才能转化一个注册用户，而业界网站的访问-注册转化通常在 15%-30% 之间，举个例子：肯定有人刚看到 Landing Page 的时候觉得特别需要，但看到营销邮件的时候热情已经消退了，所以也就流失了。凑热闹的也肯定会有了。所以邮箱的的转化率肯定是不如 1:1 论坛转化的，从数据上来说也可以解释。
 我们在这次邀请之后，在 Amazon SES 上加入了邮件的追踪，用来计算转化率，更能数据化的分析用户到底在哪个环节流失了，推荐大家在是用邮件系统是时候都开启这个服务。
 
-但其实在我们获取用户的过程中还是犯了个错误，我们只关注了渠道的易用性，没关注渠道的契合性。V2EX 作为以开发者，产品经理为主要活跃群体的平台，本身与 Podwise 与播客听众并不是特别契合，我们当初之所以选择 V2EX 只是因为它对产品发布友好，如果重新再来一次的话，我们可能会选择在即刻的一起听播客 群组 和 小红书 招募用户，这样会用户群会更聚焦一些，然后对产品的帮助也会更大。
+但其实在我们获取用户的过程中还是犯了个错误，我们只关注了渠道的易用性，没关注渠道的契合性。V2EX 作为以开发者，产品经理为主要活跃群体的平台，本身与 Podwise 与播客听众并不是特别契合，我们当初之所以选择 V2EX 只是因为它对产品发布友好，如果重新再来一次的话，我们可能会选择在即刻的“一起听播客”群组和小红书招募用户，这样会用户群会更聚焦一些，然后对产品的帮助也会更大。
 
 总之，在 Podwise 在通过 Landing Page 和 V2EX 社区的宣发后，成功获得了最初的 200 个用户，为我们能够持续构建服务开了个好头。
