--- a/pages/grow/monetize.mdx
+++ b/pages/grow/monetize.mdx
@@ -10,7 +10,7 @@ title: 意料之外的爆发
 
 Podwise 的定价是 $9.9 一个月，年订的话折算到月 $5.9，按人民币计价的话超过 ¥40 人民币，这对于国内用户来说是有些偏高的，对比国内付费渗透率较高的应用来说，年订 ¥298 已经是很多产品上限，可以注意网盘和视频会员，他们定价大多都在 ¥198-¥298 之间。而 Podwise 的年订价格是超过 ¥500 的，这对于一部分是是有一定疑虑的，当然这是针对国内市场的定价问题，对于国外来说，$9.9 的定价本身不存在问题。
 
-通过 3.5 折左右的折扣，我们将 Podwise 的年订价格降到了 ¥25 左右，这样结合用户对于 AI 高成本的预期，比较成功的实现了一次势能转换，为什么将是势能转换，主要是将前期的一些品牌曝光度，美誉度等等在一次活动中的集中变现。
+通过 3.5 折左右的折扣，我们将 Podwise 的年订价格降到了 ¥290 左右，这样结合用户对于 AI 高成本的预期，比较成功的实现了一次势能转换，为什么说是势能转换，主要是将前期的一些品牌曝光度，美誉度等等在一次活动中的集中变现。
 
 在活动结束之后，我们发现 Podwise 的增长曲线比活动之前来的更加陡峭一些，明显是受众增加而带来的订阅增长，我们分析这里面一定有来自活动之后订阅用户的二次传播，这些都是免费的流量。
 
