correct more typos

--- a/pages/grow/strategy.mdx
+++ b/pages/grow/strategy.mdx
@@ -12,9 +12,9 @@ Podwise 遵循 0 成本宣传策略，毕竟是白手起家，本身也没什么
 
 而低杠杆的平台比较适合做品牌和用户反馈，比如用户会下意识的去 Twitter、微博等平台找产品的官方账号，一方面看产品有什么最新的进展，更重要的是反馈问题等，而这些平台因为私信等功能其实还是比较适合做这样的功能的。所以对 Podwise 来说低杠杆的平台我们会主要做官方内容的宣发以及及时的问题反馈。
 
-总结一下，我们认为在前期我们最需要时通过论坛来做内容营销转化，有一定用户基础之后，再发力做品牌营销来巩固用户。
+总结一下，我们认为在前期我们最需要是通过论坛来做内容营销转化，有一定用户基础之后，再发力做品牌营销来巩固用户。
 
-我们再聊一下 ProductHunt 的 Launch，很多人把在 ProductHunt 的发布看的比较重，觉得能从这次发布中直接获取大量的用户，并借此获得不菲的营收。但其实往往是事与愿违的。因为 ProductHunt 网站的核心用户其实是产品经理和开发者，如果你的产品面向的用户是他们，那有可能，但大部分的产品其实是面向普通用户的，所以客群不匹配结果可想而知。而且现在 ProductHunt 因为这次 AI 产品的爆发，每天有大量的产品发布，而排行榜的日榜前三往往需要 800 票以上，这以自然流量转化到 upvote 上几乎是不可能的。所以最终发布在拼的其实不是产品力，而是人脉。对，ProductHunt 有很多 Telegram，Facebook，Linkedin 甚至包括微信的 upvote 群，如果你的发布没有这些群的帮助，那可能非常难排到前三。
+我们再聊一下 ProductHunt 的 Launch，很多人把在 ProductHunt 的发布看得比较重，觉得能从这次发布中直接获取大量的用户，并借此获得不菲的营收。但其实往往是事与愿违的。因为 ProductHunt 网站的核心用户其实是产品经理和开发者，如果你的产品面向的用户是他们，那有可能，但大部分的产品其实是面向普通用户的，所以客群不匹配结果可想而知。而且现在 ProductHunt 因为这次 AI 产品的爆发，每天有大量的产品发布，而排行榜的日榜前三往往需要 800 票以上，这以自然流量转化到 upvote 上几乎是不可能的。所以最终发布在拼的其实不是产品力，而是人脉。对，ProductHunt 有很多 Telegram，Facebook，Linkedin 甚至包括微信的 upvote 群，如果你的发布没有这些群的帮助，那可能非常难排到前三。
 
 说了这么多 ProduntHunt 的问题，那为什么还有这么多人冲着去发布。那是因为有很多 KOL，尤其是科技产品领域，因为制作内容的关系，他们会关注 ProductHunt 的日榜和周榜，并制作相关内容来获取粉丝关注，这就是 Producthunt 的意义。如果你之前发布过 ProductHunt，但却觉得没什么效果，那可能是因为你没有被他们说关注到。所以 ProductHunt 的意义并不是直接获取用户，而是通过日榜和周榜前三来获取 KOL 的关注，形成二次传播。这其实也是高杠杆的意义所在。
 
