--- a/pages/review/fault.mdx
+++ b/pages/review/fault.mdx
@@ -4,7 +4,7 @@ title: 最不应该犯的错误
 
 如果有什么是我们最不应该犯的错误，那就是我们在定价的时候期望用信息差来赚钱。
 
-由于 Podwise 与 [Otter.ai](http://Otter.ai) 之类的产品有个很大的区别，Otter 是服务于会议场景，在会议的转录中，基本不太可能出现重复音频，所以 Otter 的转录时间是肯定会被用满的。但 Podwise 不一样，Podcast 的有很强的头部效应，所以热门节目只需要转录一次，就可以永远服务其他用户，而 Podwise 服务只需要转录一次，也就是利用一份资源消耗，赚取多份利润，这是 Podwise 规划盈利模型的基本逻辑。结果，在第一次测试的时候，多为用户直接提问，是不是你们会缓存节目的转录结果，下个用户来的时候就不用再次转录了。这里面产生了两个逻辑：有用户提说，如果是我转的，那我能不能哪后续的阅读分润？还有用户提另外一端，如果已经被转过的节目，我在学习的时候能不能只扣我 0.5 次。到这里我们才恍然大悟，做产品永远不能把用户当傻瓜，这是我们最大的错误。
+由于 Podwise 与 [Otter.ai](http://Otter.ai) 之类的产品有个很大的区别，Otter 是服务于会议场景，在会议的转录中，基本不太可能出现重复音频，所以 Otter 的转录时间是肯定会被用满的。但 Podwise 不一样，Podcast 的有很强的头部效应，所以热门节目只需要转录一次，就可以永远服务其他用户，而 Podwise 服务只需要转录一次，也就是利用一份资源消耗，赚取多份利润，这是 Podwise 规划盈利模型的基本逻辑。结果，在第一次测试的时候，多为用户直接提问，是不是你们会缓存节目的转录结果，下个用户来的时候就不用再次转录了。这里面产生了两个逻辑：有用户提说，如果是我转的，那我能不能拿后续的阅读分润？还有用户提另外一端，如果已经被转过的节目，我在学习的时候能不能只扣我 0.5 次。到这里我们才恍然大悟，做产品永远不能把用户当傻瓜，这是我们最大的错误。
 
 在接到用户的灵魂两问之后，我们也紧急讨论，最后决定将计费方式变更为：主动使用 AI 处理播客会扣除次数，但查看已处理过的节目则不扣除次数，并且 Podwise 平台会帮大家默认转平台上订阅 Top 100 的节目。从这个决定看，我们付出了巨大的代价，不仅无法利用播客的头部效应来降低成本，而且平台还默认转录内容当成大家免费的资源。在这之后，考虑到利润，我们只能寄希望于 ChatGPT 规模化降价以及 Podwise 自己的规模化盈利了。但没办法，我们不能通过惩罚客户来弥补自己的错误。
 
