give authors more respect

--- a/pages/authors.mdx
+++ b/pages/authors.mdx
@@ -17,6 +17,10 @@ title: 作者
 3. 为支持社群会员的产品发展，社群为每位会员提供「硬地骇客」播客节目 Show Notes 广告位一次，价值 ¥500，可为产品提供高质量的站点外链，提升搜索引擎排名。
 4. 不定期的黑客马拉松赛事，优胜者可以获得包含现金奖励与项目孵化等合作项目支持。
 
-![knowledge planet](/attachments/other/planet.png)
+<p align="center">
+  <a href="https://t.zsxq.com/19SKbmflB">
+    <img src="/attachments/other/planet.png" width="650"/>
+  </a>
+</p>
 
 我们坚信：“每个人都应该拥有一个小生意”！
