--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,48 +2,28 @@
 title: 两个月 $12000 ARR 实践之路
 ---
 
-![ARR](/attachments/other/ARR.png)
+<p align="center">
+  <a href="https://t.zsxq.com/19SKbmflB">
+    <img src="/attachments/other/ARR.png" width="650"/>
+  </a>
+</p>
+
+### 关于本书
 
 本书是关于 [Podwise](https://podwise.ai) 产品从灵感到变现过程的忠实记录以及复盘。
 
-全书以产品的全生命周期划分为 5 个部分：
-
-<details open>
-  <summary>💡 灵感</summary>
-
-  * 从社区出发
-  * 百万美金的利基市场
-  * MVP MVP MVP
-</details>
-<details open>
-  <summary>🛠 构建</summary>
-
-  * 设计与开发一体
-  * 用方便且擅长的技术栈
-  * 关于大模型必须知道的事
-  * 省下的都是赚的
-  * 能用的服务千万别做
-</details>
-<details open>
-  <summary>🚀 发布</summary>
-
-  * 最初的 200 个用户
-  * 永远跟用户站在一起
-  * 定价要关注成本
-</details>
-<details open>
-  <summary>💸 增长</summary>
-
-  * 到杠杆高的地方去做宣传
-  * 互动、回复、关注长尾
-  * 意料之外的爆发
-</details>
-<details open>
-  <summary>🤔 复盘</summary>
-
-  * 对远景的一些规划
-  * 最不应该犯的错误
-  * 还会坚持干的几件事
-</details>
+[Podwise](https://podwise.ai/) 是一款专为播客听友设计的 AI 知识管理应用。 利用 Podwise 平台，你只需 follow 喜欢的播客，比如「硬地骇客」，当有节目发布后，Podwise 会通过 AI 对播客内容进行 转录、提取、总结、分析 等一系列操作，帮你掰开了揉碎了硬核的播客知识。同时与 Notion、Obsidian、Logseq 和 Readwise 等平台的打通，嵌入你的知识管理工作流，协同在其他渠道的包括新闻，Newsletter，Blog 等内容，帮你完善第二大脑 🧠。
 
 Podwise 今天的成绩远称不上成功，可能勉强算是找到 PMF (Product-Market Fit)，所以这不是一份权威指南，内容仅供参考。
+
+## 版权声明
+
+本作品采用 <a rev="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a> 进行许可。
+
+这意味着您可以自由分享、复制和传播本作品的整体或部分内容,但须遵守下列条件:
+
+* 署名 — 您必须给出适当的署名,提供指向本许可协议的链接,同时标明是否(对原始作品)作了修改。您可以用任何合理的方式来署名,但不得以任何方式暗示许可人为您或您对本作品的使用提供认可。
+* 非商业性使用 — 您不得将本作品用于商业目的。
+* 禁止演绎 — 如果您再混合、转换或者基于本作品创作,您不可以分发修改后的作品。
+
+无视上述任何条件,都构成违反许可协议,根据法律将受到相应的处罚。
