add toc ads for planet

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,7 +16,7 @@ title: 两个月 $12000 ARR 实践之路
 
 Podwise 今天的成绩远称不上成功，可能勉强算是找到 PMF (Product-Market Fit)，所以这不是一份权威指南，内容仅供参考。
 
-## 版权声明
+### 版权声明
 
 本作品采用 <a rev="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a> 进行许可。
 
