--- a/pages/grow/tactics.mdx
+++ b/pages/grow/tactics.mdx
@@ -26,17 +26,17 @@ Podwise 正式的宣发是从「硬地骇客」的播客开始的，我们用自
 
 考虑到我们本身并没有在别的平台做过宣发，所以这次小红书 KOL 自主宣传也很有可能来自于即刻本身的社区覆盖，在热帖下面我们发现，很多用户不知道 Podwise 如何访问，还有使用方法等不太清楚，我们想说，是时候可以做做小红书了。
 
-如果说即刻是一个 KOL 主导的社区，那在小红书，它的流量策略可以让每个人都火一次。所以在小红书 标题党 + 解决方案 是一个非常好的流量获取策略，比如：哭死，姐妹们，家人们， 谁懂啊 等等，当然如果你的标题内容主打帮大家解决一个问题，那这篇内容是有可能迎来传播的，当然是有可能，不是绝对，毕竟小红书的推流策略是一个黑盒。
+如果说即刻是一个 KOL 主导的社区，那在小红书，它的流量策略可以让每个人都火一次。所以在小红书 标题党 + 解决方案 是一个非常好的流量获取策略，比如：哭死，姐妹们，家人们，谁懂啊 等等，当然如果你的标题内容主打帮大家解决一个问题，那这篇内容是有可能迎来传播的，当然是有可能，不是绝对，毕竟小红书的推流策略是一个黑盒。
 
 Podwise 在小红书的起号是通过一篇：[我真的哭死，这么用心做的 app 值得被看见](https://www.xiaohongshu.com/explore/6582dc6a000000003403db9a)
 
 起号的，这也是一篇典型的 标题党 + 解决方案的文章，因为这篇笔记的图上文字是：“听播客做笔记，终于等到你”，所以属于内容标题党 + 封面解决方案的组合，如果你也想要尝试在小红书做账号，那也可以试试看。
 
-另外小红书也是 Gen Z 时代用户的搜索引擎，所以如果你要做小红书，一定要注意长尾流量，因为在你不是 KOL 的情况下，你的内容被刷到的概率不会很大，但是假如用户对于某件事寻求解决方案，那么如果你有一篇相关的笔记，那这篇笔记会持续不断的获得流量，进而产生转化。类似于你做搜索引擎的 SEO，所以在小红书发笔记时候，需要时刻思考 SEO，我这篇笔记到底要占领哪个关键词，帮用户解决什么问题？而如何发现用户到底在搜索什么？可以从小红书本身的搜索框提示出发，看看用户到底在搜什么？进而写一篇相关的笔记。
+另外小红书也是 Gen Z 时代用户的搜索引擎，所以如果你要做小红书，一定要注意长尾流量，因为在你不是 KOL 的情况下，你的内容被刷到的概率不会很大，但是假如用户对于某件事寻求解决方案，那么如果你有一篇相关的笔记，那这篇笔记会持续不断的获得流量，进而产生转化。类似于你做搜索引擎的 SEO，所以在小红书发笔记时候，需要时刻思考 SEO，我这篇笔记到底要占领哪个关键词，帮用户解决什么问题？而如何发现用户到底在搜索什么？可以从小红书本身的搜索框提示出发，看看用户到底在搜什么，进而写一篇相关的笔记。
 
 ![longtail](/attachments/grow/longtail.png)
 
-所以当我们发现用户在小红书上排名第一的竟然是 Podwise 怎么用的时候，我们就立刻决定写一篇 Podwise 使用教程的内容：[人人都能学会！🪄手把手教你使用Podwise.](https://www.xiaohongshu.com/explore/6588cbcc0000000038022b88) d至今还在不断的收获点赞和转化。
+所以当我们发现用户在小红书上排名第一的竟然是 Podwise 怎么用的时候，我们就立刻决定写一篇 Podwise 使用教程的内容：[人人都能学会！🪄手把手教你使用Podwise.](https://www.xiaohongshu.com/explore/6588cbcc0000000038022b88)，至今还在不断的收获点赞和转化。
 
 另外不论是即刻还是小红书，回复相关热帖都是一个非常好的流量获取手段，小红书甚至有个功能，在你的帖子被其他网友点赞超过一定次数之后，小红书会提示你将回帖直接发成一篇笔记，这也是一个非常好的曝光手段。
 
