add stripe integration doc

--- a/pages/update.mdx
+++ b/pages/update.mdx
@@ -4,4 +4,5 @@ title: 作者
 
 ### 更新历史
 
+- 2024-08-12: 新增[「Stripe 接入实践」](/appendix/stripe)
 - 2024-06-02：新增[「Lemonsqueezy 计费场景支持和常见问题」](/appendix/lemonsqueezy)
