capacitor & next.js develop guide part 1

--- a/pages/update.mdx
+++ b/pages/update.mdx
@@ -6,3 +6,4 @@ title: 作者
 
 - 2024-08-12: 新增[「Stripe 接入实践」](/appendix/stripe)
 - 2024-06-02：新增[「Lemonsqueezy 计费场景支持和常见问题」](/appendix/lemonsqueezy)
+- 2025-03-28: 新增[「Capacitor & Next.js 开发 App 实战 Part I」](/appendix/capacitor_p1)
